# mlff-nim-deploy

./: .gitignore  LICENSE  README.md  deploy_custom_mace.py  install_note.md  pyproject.toml  query_mace_nim.py  train_mace.py
optimize_inference/: 1_simple_inference.py  2_dynamic_inference.py  2_vllm_opt_inference.py  3_tensorrt_opt_inference.py  README.md  simple_inference.py
scripts_NIM_slurm_cluster/: launch_nim_interactive.sh  query_nim_from_login.sh  run_nim_server.slurm  setup_nim_env.sh
