[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlff-nim-deploy"
version = "0.1.0"
description = "Deployment, training, and query tools for NVIDIA ALCHEMI NIM MACE models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "requests>=2.28.0",
    "ase>=3.22.0",
    "mace-torch>=0.3.5",
    "nvalchemi-toolkit"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
]
